Compile to Java 11, use System.Logger